feat: fixed distance and cost calculation. Added mobile